검색영역 : 상세검색 추가 , 드롭다운 버튼 유형 추가

--- a/ec/inc_header.html
+++ b/ec/inc_header.html
@@ -49,7 +49,7 @@
                     <li><a href="/ec/module/ui_component.html" data-page="component">Component</a></li>
                     <li><a href="/ec/module/ui_javascript.html" data-page="javascript">Javascript</a></li>
                     <li><a href="/ec/module/ui_layout.html" data-page="layout">Layout</a></li>
-                    <li><a href="/ec/module/page_list.html">Page List</a></li>
+                    <li><a href="/ec/module/page_list.html" data-page="pagelist">Page List</a></li>
                 </ul>
             </div>
         </div>
