--- a/ec/module/page_list.html
+++ b/ec/module/page_list.html
@@ -8,7 +8,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="main">
-                <h1 class="page-header" data-page="buttons">Page List</h1>
+                <h1 class="page-header" data-page="pagelist">Page List</h1>
                 <div class="guide-box">
                     <div class="guide-row">
                         <h2 class="sub-header no-code">신청관리</h2>
