--- a/ec/module/ui_buttons.html
+++ b/ec/module/ui_buttons.html
@@ -35,6 +35,8 @@
                      <div class="guide-code">
                         <pre><code class="html">
                             <a class="ui-btn" href="#">Button</a>
+                            <a class="ui-btn btn-gray" href="#">Button</a>
+                            <a class="ui-btn btn-black" href="#">Button</a>
                             <a class="ui-btn btn-blue" href="#">Button</a>
                             <a class="ui-btn btn-green" href="#">Button</a>
                             <a class="ui-btn btn-sky" href="#">Button</a>
@@ -88,9 +90,9 @@
                     <div class="guide-code">
                         <pre><code class="html">
                             <a class="ui-btn btn-xl" href="#">X-Large</a>
-                            <a class="ui-btn btn-xl" href="#">Large</a>
-                            <a class="ui-btn btn-xl" href="#">Default</a>
-                            <a class="ui-btn btn-xl" href="#">Small</a>              
+                            <a class="ui-btn btn-l" href="#">Large</a>
+                            <a class="ui-btn" href="#">Default</a>
+                            <a class="ui-btn btn-s" href="#">Small</a>              
                         </code></pre>
                     </div>
                     <div class="guide-row">
@@ -141,7 +143,114 @@
                             <input class="ui-btn" type="button" value="Input" disabled="disabled">
                             <input class="ui-btn" type="submit" value="Submit" disabled="disabled">    
                         </code></pre>
-                    </div>               
+                    </div>
+                    <div class="guide-row">
+                        <h2 class="sub-header">Dropdown</h2>
+                        <p>
+                            <a class="ui-btn btn-dropdown" href="#">Button</a>
+                            <a class="ui-btn btn-gray btn-dropdown" href="#">Button</a>
+                            <a class="ui-btn btn-black btn-dropdown" href="#">Button</a>
+                            <a class="ui-btn btn-blue btn-dropdown" href="#">Button</a>
+                            <a class="ui-btn btn-green btn-dropdown" href="#">Button</a>
+                            <a class="ui-btn btn-sky btn-dropdown" href="#">Button</a>
+                            <a class="ui-btn btn-orange btn-dropdown" href="#">Button</a>
+                            <a class="ui-btn btn-red btn-dropdown" href="#">Button</a>
+                        </p>
+                        <p>
+                            <button class="ui-btn btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                            <button class="ui-btn btn-gray btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                            <button class="ui-btn btn-black btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                            <button class="ui-btn btn-blue btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                            <button class="ui-btn btn-green btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                            <button class="ui-btn btn-sky btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                            <button class="ui-btn btn-orange btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                            <button class="ui-btn btn-red btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                        </p>
+                        <p>
+                            <a class="ui-btn btn-dropdown btn-s" href="#">Button</a>
+                            <a class="ui-btn btn-gray btn-dropdown btn-s" href="#">Button</a>
+                            <a class="ui-btn btn-black btn-dropdown btn-s" href="#">Button</a>
+                            <a class="ui-btn btn-blue btn-dropdown btn-s" href="#">Button</a>
+                            <a class="ui-btn btn-green btn-dropdown btn-s" href="#">Button</a>
+                            <a class="ui-btn btn-sky btn-dropdown btn-s" href="#">Button</a>
+                            <a class="ui-btn btn-orange btn-dropdown btn-s" href="#">Button</a>
+                            <a class="ui-btn btn-red btn-dropdown btn-s" href="#">Button</a>                          
+                        </p>
+                        <p>
+                            <a class="ui-btn btn-dropdown btn-l" href="#">Button</a>
+                            <a class="ui-btn btn-gray btn-dropdown btn-l" href="#">Button</a>
+                            <a class="ui-btn btn-black btn-dropdown btn-l" href="#">Button</a>
+                            <a class="ui-btn btn-blue btn-dropdown btn-l" href="#">Button</a>
+                            <a class="ui-btn btn-green btn-dropdown btn-l" href="#">Button</a>
+                            <a class="ui-btn btn-sky btn-dropdown btn-l" href="#">Button</a>
+                            <a class="ui-btn btn-orange btn-dropdown btn-l" href="#">Button</a>
+                            <a class="ui-btn btn-red btn-dropdown btn-l" href="#">Button</a>                          
+                        </p>
+                        <p>
+                            <a class="ui-btn btn-dropdown btn-xl" href="#">Button</a>
+                            <a class="ui-btn btn-gray btn-dropdown btn-xl" href="#">Button</a>
+                            <a class="ui-btn btn-black btn-dropdown btn-xl" href="#">Button</a>
+                            <a class="ui-btn btn-blue btn-dropdown btn-xl" href="#">Button</a>
+                            <a class="ui-btn btn-green btn-dropdown btn-xl" href="#">Button</a>
+                            <a class="ui-btn btn-sky btn-dropdown btn-xl" href="#">Button</a>
+                            <a class="ui-btn btn-orange btn-dropdown btn-xl" href="#">Button</a>
+                            <a class="ui-btn btn-red btn-dropdown btn-xl" href="#">Button</a>                          
+                        </p>
+                    </div>
+                     <div class="guide-code">
+                        <pre><code class="html">
+                            <p>
+                                <a class="ui-btn btn-dropdown" href="#">Button</a>
+                                <a class="ui-btn btn-gray btn-dropdown" href="#">Button</a>
+                                <a class="ui-btn btn-black btn-dropdown" href="#">Button</a>
+                                <a class="ui-btn btn-blue btn-dropdown" href="#">Button</a>
+                                <a class="ui-btn btn-green btn-dropdown" href="#">Button</a>
+                                <a class="ui-btn btn-sky btn-dropdown" href="#">Button</a>
+                                <a class="ui-btn btn-orange btn-dropdown" href="#">Button</a>
+                                <a class="ui-btn btn-red btn-dropdown" href="#">Button</a>
+                            </p>
+                            <p>
+                                <button class="ui-btn btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                                <button class="ui-btn btn-gray btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                                <button class="ui-btn btn-black btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                                <button class="ui-btn btn-blue btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                                <button class="ui-btn btn-green btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                                <button class="ui-btn btn-sky btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                                <button class="ui-btn btn-orange btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                                <button class="ui-btn btn-red btn-dropdown" type="submit" disabled="disabled">Disabled</button>                            
+                            </p>
+                            <p>
+                                <a class="ui-btn btn-dropdown btn-s" href="#">Button</a>
+                                <a class="ui-btn btn-gray btn-dropdown btn-s" href="#">Button</a>
+                                <a class="ui-btn btn-black btn-dropdown btn-s" href="#">Button</a>
+                                <a class="ui-btn btn-blue btn-dropdown btn-s" href="#">Button</a>
+                                <a class="ui-btn btn-green btn-dropdown btn-s" href="#">Button</a>
+                                <a class="ui-btn btn-sky btn-dropdown btn-s" href="#">Button</a>
+                                <a class="ui-btn btn-orange btn-dropdown btn-s" href="#">Button</a>
+                                <a class="ui-btn btn-red btn-dropdown btn-s" href="#">Button</a>                          
+                            </p>
+                            <p>
+                                <a class="ui-btn btn-dropdown btn-l" href="#">Button</a>
+                                <a class="ui-btn btn-gray btn-dropdown btn-l" href="#">Button</a>
+                                <a class="ui-btn btn-black btn-dropdown btn-l" href="#">Button</a>
+                                <a class="ui-btn btn-blue btn-dropdown btn-l" href="#">Button</a>
+                                <a class="ui-btn btn-green btn-dropdown btn-l" href="#">Button</a>
+                                <a class="ui-btn btn-sky btn-dropdown btn-l" href="#">Button</a>
+                                <a class="ui-btn btn-orange btn-dropdown btn-l" href="#">Button</a>
+                                <a class="ui-btn btn-red btn-dropdown btn-l" href="#">Button</a>                          
+                            </p>
+                            <p>
+                                <a class="ui-btn btn-dropdown btn-xl" href="#">Button</a>
+                                <a class="ui-btn btn-gray btn-dropdown btn-xl" href="#">Button</a>
+                                <a class="ui-btn btn-black btn-dropdown btn-xl" href="#">Button</a>
+                                <a class="ui-btn btn-blue btn-dropdown btn-xl" href="#">Button</a>
+                                <a class="ui-btn btn-green btn-dropdown btn-xl" href="#">Button</a>
+                                <a class="ui-btn btn-sky btn-dropdown btn-xl" href="#">Button</a>
+                                <a class="ui-btn btn-orange btn-dropdown btn-xl" href="#">Button</a>
+                                <a class="ui-btn btn-red btn-dropdown btn-xl" href="#">Button</a>                          
+                            </p>              
+                        </code></pre>
+                    </div>
                 </div>
             </div>
         </div>
