--- a/ec/module/ui_component.html
+++ b/ec/module/ui_component.html
@@ -1,5 +1,4 @@
 <?php require_once '../inc_header.html'; ?>
-
     <div class="container-fluid">
         <div class="row">
             <div class="main">
@@ -15,6 +14,7 @@
                         <li role="presentation"><a href="#tab6" aria-controls="icon" role="tab" data-toggle="tab">Icon & Label</a></li>
                         <li role="presentation"><a href="#tab7" aria-controls="logo" role="tab" data-toggle="tab">Mall Logo</a></li>
                         <li role="presentation"><a href="#tab8" aria-controls="tooltip" role="tab" data-toggle="tab">Tooltip</a></li>
+                        <li role="presentation"><a href="#tab9" aria-controls="Etc.." role="tab" data-toggle="tab">Etc..</a></li>
                     </ul>
                     <!-- Tab panes -->
                     <div class="tab-content">
@@ -710,6 +710,123 @@
                                         <pre><code class="html">
                                             <span class="tooltip" title="Tooltip Example">Tooltip Example</span>
                                         </code></pre>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="tab9">
+                            <div class="guide-box">
+                                <div class="guide-row">
+                                    <h2 class="sub-header no-code">Loading... Type 1</h2>
+                                    <div class="sub-des">
+                                        <p>로딩 이미지를 적용 할 요소에 <span class="code">loading</span>클래스를 추가해주세요.</p>                                        
+                                    </div>
+                                    <a href="#" class="ui-btn" onclick="$('.loading-example').addClass('loading');return false">Add Loading</a>
+                                    <a href="#" class="ui-btn" onclick="$('.loading-example').removeClass('loading');return false">Delete Loading</a>
+                                    <div class="loading-example" style="margin-top:20px;padding:20px;border:1px solid #d9d9d9">
+                                        Loading Container
+                                    </div>
+                                    <div class="guide-row">
+                                        <div class="guide-code">
+                                            <pre><code class="html">
+                                                <a href="#" class="ui-btn" onclick="$('.loading-example').addClass('loading');return false">Add Loading</a>
+                                                <a href="#" class="ui-btn" onclick="$('.loading-example').removeClass('loading');return false">Delete Loading</a>
+                                                <div class="loading-example">Loading Container</div>
+                                            </code></pre>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="guide-row">
+                                    <h2 class="sub-header no-code">Loading... Type 2</h2>
+                                    <div class="sub-des">
+                                        <p>로딩 이미지를 적용 할 요소에 <span class="code">&lt;div class="loader"&gt;...&lt;/div&gt;</span>요소를 추가해주세요.</p>                                        
+                                        <p>이 방식은 IE 10 이상 부터 지원합니다.</p>
+                                    </div>
+                                    <a href="#" class="ui-btn" onclick="$('.loading-example2 .loader').show();return false">Loader Show</a>
+                                    <a href="#" class="ui-btn" onclick="$('.loading-example2 .loader').hide();return false">Loader Hide</a>
+                                    <div class="loading-example2" style="margin-top:20px;padding:20px;border:1px solid #d9d9d9">
+                                        Loading Container
+                                        <div class="loader">
+                                            <div class="load">
+                                                <div class="gear one">
+                                                    <svg id="blue" viewBox="0 0 100 100" fill="#8ec9ef">
+                                                    <path d="M97.6,55.7V44.3l-13.6-2.9c-0.8-3.3-2.1-6.4-3.9-9.3l7.6-11.7l-8-8L67.9,20c-2.9-1.7-6-3.1-9.3-3.9L55.7,2.4H44.3l-2.9,13.6      c-3.3,0.8-6.4,2.1-9.3,3.9l-11.7-7.6l-8,8L20,32.1c-1.7,2.9-3.1,6-3.9,9.3L2.4,44.3v11.4l13.6,2.9c0.8,3.3,2.1,6.4,3.9,9.3      l-7.6,11.7l8,8L32.1,80c2.9,1.7,6,3.1,9.3,3.9l2.9,13.6h11.4l2.9-13.6c3.3-0.8,6.4-2.1,9.3-3.9l11.7,7.6l8-8L80,67.9      c1.7-2.9,3.1-6,3.9-9.3L97.6,55.7z M50,65.6c-8.7,0-15.6-7-15.6-15.6s7-15.6,15.6-15.6s15.6,7,15.6,15.6S58.7,65.6,50,65.6z"></path>
+                                                    </svg>
+                                                </div>
+                                                <div class="gear two">
+                                                    <svg id="pink" viewBox="0 0 100 100" fill="#ecbd85">
+                                                    <path d="M97.6,55.7V44.3l-13.6-2.9c-0.8-3.3-2.1-6.4-3.9-9.3l7.6-11.7l-8-8L67.9,20c-2.9-1.7-6-3.1-9.3-3.9L55.7,2.4H44.3l-2.9,13.6      c-3.3,0.8-6.4,2.1-9.3,3.9l-11.7-7.6l-8,8L20,32.1c-1.7,2.9-3.1,6-3.9,9.3L2.4,44.3v11.4l13.6,2.9c0.8,3.3,2.1,6.4,3.9,9.3      l-7.6,11.7l8,8L32.1,80c2.9,1.7,6,3.1,9.3,3.9l2.9,13.6h11.4l2.9-13.6c3.3-0.8,6.4-2.1,9.3-3.9l11.7,7.6l8-8L80,67.9      c1.7-2.9,3.1-6,3.9-9.3L97.6,55.7z M50,65.6c-8.7,0-15.6-7-15.6-15.6s7-15.6,15.6-15.6s15.6,7,15.6,15.6S58.7,65.6,50,65.6z"></path>
+                                                    </svg>
+                                                </div>
+                                                <div class="gear three">
+                                                    <svg id="yellow" viewBox="0 0 100 100" fill="#b5b5b5">
+                                                    <path d="M97.6,55.7V44.3l-13.6-2.9c-0.8-3.3-2.1-6.4-3.9-9.3l7.6-11.7l-8-8L67.9,20c-2.9-1.7-6-3.1-9.3-3.9L55.7,2.4H44.3l-2.9,13.6      c-3.3,0.8-6.4,2.1-9.3,3.9l-11.7-7.6l-8,8L20,32.1c-1.7,2.9-3.1,6-3.9,9.3L2.4,44.3v11.4l13.6,2.9c0.8,3.3,2.1,6.4,3.9,9.3      l-7.6,11.7l8,8L32.1,80c2.9,1.7,6,3.1,9.3,3.9l2.9,13.6h11.4l2.9-13.6c3.3-0.8,6.4-2.1,9.3-3.9l11.7,7.6l8-8L80,67.9      c1.7-2.9,3.1-6,3.9-9.3L97.6,55.7z M50,65.6c-8.7,0-15.6-7-15.6-15.6s7-15.6,15.6-15.6s15.6,7,15.6,15.6S58.7,65.6,50,65.6z"></path>
+                                                    </svg>
+                                                </div>
+                                                <div class="text">loading</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="guide-row">
+                                        <div class="guide-code">
+                                            <pre><code class="html">
+                                                &lt;a href="#" class="ui-btn" onclick="$('.loading-example2 .loader').show();return false"&gt;Loader Show&lt;/a&gt;
+                                                &lt;a href="#" class="ui-btn" onclick="$('.loading-example2 .loader').hide();return false"&gt;Loader Hide&lt;/a&gt;
+                                                &lt;div class="loading-example2" style="margin-top:20px;padding:20px;border:1px solid #d9d9d9"&gt;
+                                                    Loading Container
+                                                    &lt;div class="loader"&gt;
+                                                        &lt;div class="load"&gt;
+                                                            &lt;div class="gear one"&gt;
+                                                                &lt;svg id="blue" viewBox="0 0 100 100" fill="#8ec9ef"&gt;
+                                                                    &lt;path d="M97.6,55.7V44.3l-13.6-2.9c-0.8-3.3-2.1-6.4-3.9-9.3l7.6-11.7l-8-8L67.9,20c-2.9-1.7-6-3.1-9.3-3.9L55.7,2.4H44.3l-2.9,13.6      c-3.3,0.8-6.4,2.1-9.3,3.9l-11.7-7.6l-8,8L20,32.1c-1.7,2.9-3.1,6-3.9,9.3L2.4,44.3v11.4l13.6,2.9c0.8,3.3,2.1,6.4,3.9,9.3      l-7.6,11.7l8,8L32.1,80c2.9,1.7,6,3.1,9.3,3.9l2.9,13.6h11.4l2.9-13.6c3.3-0.8,6.4-2.1,9.3-3.9l11.7,7.6l8-8L80,67.9      c1.7-2.9,3.1-6,3.9-9.3L97.6,55.7z M50,65.6c-8.7,0-15.6-7-15.6-15.6s7-15.6,15.6-15.6s15.6,7,15.6,15.6S58.7,65.6,50,65.6z"&gt;&lt;/path&gt;
+                                                                &lt;/svg&gt;
+                                                            &lt;/div&gt;
+                                                            &lt;div class="gear two"&gt;
+                                                                &lt;svg id="pink" viewBox="0 0 100 100" fill="#ecbd85"&gt;
+                                                                    &lt;path d="M97.6,55.7V44.3l-13.6-2.9c-0.8-3.3-2.1-6.4-3.9-9.3l7.6-11.7l-8-8L67.9,20c-2.9-1.7-6-3.1-9.3-3.9L55.7,2.4H44.3l-2.9,13.6      c-3.3,0.8-6.4,2.1-9.3,3.9l-11.7-7.6l-8,8L20,32.1c-1.7,2.9-3.1,6-3.9,9.3L2.4,44.3v11.4l13.6,2.9c0.8,3.3,2.1,6.4,3.9,9.3      l-7.6,11.7l8,8L32.1,80c2.9,1.7,6,3.1,9.3,3.9l2.9,13.6h11.4l2.9-13.6c3.3-0.8,6.4-2.1,9.3-3.9l11.7,7.6l8-8L80,67.9      c1.7-2.9,3.1-6,3.9-9.3L97.6,55.7z M50,65.6c-8.7,0-15.6-7-15.6-15.6s7-15.6,15.6-15.6s15.6,7,15.6,15.6S58.7,65.6,50,65.6z"&gt;&lt;/path&gt;
+                                                                &lt;/svg&gt;
+                                                            &lt;/div&gt;
+                                                            &lt;div class="gear three"&gt;
+                                                                &lt;svg id="yellow" viewBox="0 0 100 100" fill="#b5b5b5"&gt;
+                                                                    &lt;path d="M97.6,55.7V44.3l-13.6-2.9c-0.8-3.3-2.1-6.4-3.9-9.3l7.6-11.7l-8-8L67.9,20c-2.9-1.7-6-3.1-9.3-3.9L55.7,2.4H44.3l-2.9,13.6      c-3.3,0.8-6.4,2.1-9.3,3.9l-11.7-7.6l-8,8L20,32.1c-1.7,2.9-3.1,6-3.9,9.3L2.4,44.3v11.4l13.6,2.9c0.8,3.3,2.1,6.4,3.9,9.3      l-7.6,11.7l8,8L32.1,80c2.9,1.7,6,3.1,9.3,3.9l2.9,13.6h11.4l2.9-13.6c3.3-0.8,6.4-2.1,9.3-3.9l11.7,7.6l8-8L80,67.9      c1.7-2.9,3.1-6,3.9-9.3L97.6,55.7z M50,65.6c-8.7,0-15.6-7-15.6-15.6s7-15.6,15.6-15.6s15.6,7,15.6,15.6S58.7,65.6,50,65.6z"&gt;&lt;/path&gt;
+                                                                &lt;/svg&gt;
+                                                            &lt;/div&gt;
+                                                            &lt;div class="text"&gt;loading&lt;/div&gt;
+                                                        &lt;/div&gt;
+                                                    &lt;/div&gt;
+                                                &lt;/div&gt;
+                                            </code></pre>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="guide-row">
+                                    <h2 class="sub-header no-code">Progress Bar</h2>
+                                    <div class="sub-des">
+                                        <p>Progress Bar를 적용 할 요소에 <span class="code">&lt;div class="ui-progress-wrap"&gt;...&lt;/div&gt;</span>요소를 추가해주세요.</p>                                        
+                                        <p>Progress Bar를 loader 처럼 띄워서 사용하고 싶다면 <span class="code">.ui-progress-wrap</span>요소에 <span class="code">.floating</span> 클래스를 추가해주세요.</p>                                        
+                                        <p><span class="code">.ui-progress-label</span>요소는 progress의 설명을 넣습니다.(옵션)</p>
+                                        <p><span class="code">.ui-progress-count</span>요소는 데이터의 total값과 현재 진행된 데이터 값을 넣습니다.(옵션)</p>
+                                        <p><span class="code">.ui-progress-bar</span>요소의 style='width'와 <span class="code">.ui-progress-status</span>요소의 내용은 현재 진행률을 계산하여 넣습니다.</p>                                        
+                                    </div>
+                                    <div style="margin-top:20px;padding:20px;border:1px solid #d9d9d9">
+                                        <div class="ui-progress-wrap">
+                                            <p class="ui-progress-label">Progress status... <span class="ui-progress-count">(<i class="ui-progress-now">5</i>/<i class="ui-progress-total">10</i>)</span></p>
+                                            <div class="ui-progress-rail">
+                                                <div class="ui-progress-bar" style="width:50%"><span class="ui-progress-status">50%</span></div>                                                
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="guide-row">
+                                        <div class="guide-code">
+                                            <pre><code class="html">
+                                                <div class="ui-progress-wrap">
+                                                    <p class="ui-progress-label">Progress status... <span class="ui-progress-count">(<i class="ui-progress-now">5</i>/<i class="ui-progress-total">10</i>)</span></p>
+                                                    <div class="ui-progress-rail">
+                                                        <div class="ui-progress-bar" style="width:50%"><span class="ui-progress-status">50%</span></div>                                                
+                                                    </div>
+                                                </div>
+                                            </code></pre>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
