progress bar UI edit

--- a/ec/module/ui_component.html
+++ b/ec/module/ui_component.html
@@ -808,13 +808,14 @@
                                         <p><span class="code">.ui-progress-count</span>요소는 데이터의 total값과 현재 진행된 데이터 값을 넣습니다.(옵션)</p>
                                         <p><span class="code">.ui-progress-bar</span>요소의 style='width'와 <span class="code">.ui-progress-status</span>요소의 내용은 현재 진행률을 계산하여 넣습니다.</p>                                        
                                     </div>
-                                    <div style="margin-top:20px;padding:20px;border:1px solid #d9d9d9">
+                                    <div style="position:relative;min-height:200px;margin-top:20px;padding:20px;border:1px solid #d9d9d9">
                                         <div class="ui-progress-wrap">
-                                            <p class="ui-progress-label">Progress status... <span class="ui-progress-count">(<i class="ui-progress-now">5</i>/<i class="ui-progress-total">10</i>)</span></p>
                                             <div class="ui-progress-rail">
+                                                <p class="ui-progress-label">Progress status... <span class="ui-progress-count">(<i class="ui-progress-now">5</i>/<i class="ui-progress-total">10</i>)</span></p>
                                                 <div class="ui-progress-bar" style="width:50%"><span class="ui-progress-status">50%</span></div>                                                
                                             </div>
                                         </div>
+                                        content....
                                     </div>
                                     <div class="guide-row">
                                         <div class="guide-code">
