다중선택 UI 수정

--- a/ec/module/ui_form.html
+++ b/ec/module/ui_form.html
@@ -215,7 +215,7 @@
                                         <li><label class="ui-check"><input type="checkbox" data-check-name="multiple_01" title="check 03"/><i></i> check 03</label></li>
                                     </ul>                                
                                 </div>
-                                <div class="ui-select-result"></div>
+                                <div class="ui-scroll-content ui-select-result"></div>
                             </div>
                         </code></pre>
                     </div>
